src/objects/AccountPlanning_Administration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Create_Account_Planning_Team_Members__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Account Planning Team Members</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_Commercial_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Commercial Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_Growth_Driver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Growth Driver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_Need__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Need</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_StockHolder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create StockHolder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delete_Account_Planning_Questions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete Account Planning Questions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delete_Account_Planning_Team_Members__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete Account Planning Team Members</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delete_Account_Planning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete Account Planning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delete_Business_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete Business Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delete_Commercial_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete Commercial Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delete_Growth_Driver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete Growth Driver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delete_Need__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete Need</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delete_StockHolder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete StockHolder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Edit_Account_Planning_Questions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Edit Account Planning Questions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Edit_Account_Planning_Team_Members__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Edit Account Planning Team Members</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Edit_Account_Planning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Edit Account Planning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Edit_Business_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Edit Business Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Edit_Commercial_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Edit Commercial Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Edit_Growth_Driver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Edit Growth Driver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Edit_Need__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Edit Need</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Edit_StockHolder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Edit StockHolder</label>
        <type>Checkbox</type>
    </fields>
    <label>Account Planning Administration</label>
</CustomObject>